# PiLED

./: .gitignore  CMakeLists.txt  LICENSE  README.md  globals.c  globals.h  gpio.c  gpio.h  main.c  parser.c  parser.h  piled.conf  piled.service  server.c  server.h  utils.c  utils.h
.github/workflows/: c.yml
globals/: globals.c  globals.h
parser/: config.c  config.h  parser.c  parser.h
rgb/: gpio.c  gpio.h  openrgb.c  openrgb.h  openrgb_configurator.c
server/: http.h  server.c  server.h  ws.c  ws.h
utils/: utils.c  utils.h
